Allow authentication service to override the expirations
At this point the expirations are not working as expected.
