# gateway/src/main/java/net/trajano/swarm/gateway/auth/simple/SimpleIdentityService.java
@@ -1,6 +1,6 @@
 package net.trajano.swarm.gateway.auth.simple;
 
-import java.util.Map;
+import java.util.Optional;
 import java.util.UUID;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -8,20 +8,14 @@ import net.trajano.swarm.gateway.auth.IdentityService;
 import net.trajano.swarm.gateway.auth.IdentityServiceResponse;
 import net.trajano.swarm.gateway.jwks.JwksProvider;
 import org.jose4j.jwa.AlgorithmConstraints;
-import org.jose4j.jwk.JsonWebKeySet;
 import org.jose4j.jws.AlgorithmIdentifiers;
 import org.jose4j.jws.JsonWebSignature;
 import org.jose4j.jwt.JwtClaims;
 import org.jose4j.jwt.MalformedClaimException;
-import org.jose4j.jwt.consumer.InvalidJwtException;
-import org.jose4j.jwt.consumer.JwtConsumerBuilder;
-import org.jose4j.keys.resolvers.JwksVerificationKeyResolver;
 import org.jose4j.lang.JoseException;
 import org.springframework.http.HttpHeaders;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
-import reactor.core.scheduler.Scheduler;
-import reactor.core.scheduler.Schedulers;
 
 @RequiredArgsConstructor
 @Slf4j
@@ -31,23 +25,7 @@ public class SimpleIdentityService<P> implements IdentityService<SimpleAuthentic
 
   public static final String X_JWT_AUDIENCE = "X-JWT-Audience";
 
-  private final SimpleAuthServiceProperties properties;
-
   private final JwksProvider jwksProvider;
-
-  private final RedisAuthCache redisTokenCache;
-
-  private final Scheduler jwtConsumerScheduler =
-      Schedulers.newBoundedElastic(
-          Schedulers.DEFAULT_BOUNDED_ELASTIC_SIZE,
-          Schedulers.DEFAULT_BOUNDED_ELASTIC_QUEUESIZE,
-          "jwtConsumer");
-
-  private final Scheduler refreshTokenScheduler =
-      Schedulers.newBoundedElastic(
-          Schedulers.DEFAULT_BOUNDED_ELASTIC_SIZE,
-          Schedulers.DEFAULT_BOUNDED_ELASTIC_QUEUESIZE,
-          "refreshToken");
 
   @Override
   public Mono<IdentityServiceResponse> authenticate(
@@ -56,10 +34,20 @@ public class SimpleIdentityService<P> implements IdentityService<SimpleAuthentic
     if (authenticationRequest.isAuthenticated()) {
       final var claims = new JwtClaims();
       claims.setSubject(authenticationRequest.getUsername());
+      Optional.ofNullable(authenticationRequest.getAccessTokenExpiresInMillis())
+          .map(millis -> millis / 60000.0f)
+          .ifPresent(claims::setExpirationTimeMinutesInTheFuture);
 
       final var secretClaims = new JwtClaims();
       secretClaims.setStringClaim("secret-uuid", UUID.randomUUID().toString());
       secretClaims.setSubject(authenticationRequest.getUsername());
+      Optional.ofNullable(authenticationRequest.getAccessTokenExpiresInMillis())
+          .map(millis -> millis / 60000.0f)
+          .ifPresent(minutes -> secretClaims.setClaim("access-token-expires-in-minutes", minutes));
+
+      Optional.ofNullable(authenticationRequest.getRefreshTokenExpiresInMillis())
+          .map(millis -> millis / 60000.0f)
+          .ifPresent(claims::setExpirationTimeMinutesInTheFuture);
 
       final IdentityServiceResponse response =
           IdentityServiceResponse.builder()
@@ -99,37 +87,6 @@ public class SimpleIdentityService<P> implements IdentityService<SimpleAuthentic
     return null;
   }
 
-  public Mono<String> getRefreshTokenKey(String refreshToken) {
-
-    return jsonWebKeySet()
-        .publishOn(Schedulers.parallel())
-        .map(
-            jwks ->
-                new JwtConsumerBuilder()
-                    .setVerificationKeyResolver(
-                        new JwksVerificationKeyResolver(jwks.getJsonWebKeys()))
-                    .setRequireExpirationTime()
-                    .setRequireJwtId()
-                    .setAllowedClockSkewInSeconds(10)
-                    .setJwsAlgorithmConstraints(
-                        AlgorithmConstraints.ConstraintType.PERMIT,
-                        AlgorithmIdentifiers.RSA_USING_SHA256)
-                    .build())
-        .map(
-            jwtConsumer -> {
-              try {
-                return jwtConsumer.processToClaims(refreshToken).toJson();
-              } catch (InvalidJwtException e) {
-                throw new SecurityException(e);
-              }
-            });
-  }
-
-  public Mono<JsonWebKeySet> jsonWebKeySet() {
-
-    return jwksProvider.jsonWebKeySet();
-  }
-
   @Override
   public ServerWebExchange mutateDownstreamRequest(
       ServerWebExchange exchange, JwtClaims jwtClaims) {
@@ -158,26 +115,5 @@ public class SimpleIdentityService<P> implements IdentityService<SimpleAuthentic
                 .header(X_JWT_AUDIENCE, audience)
                 .build())
         .build();
-  }
-
-  /**
-   * Here's the sequence.
-   *
-   * <ol>
-   *   <li>secrets
-   *   <li>new JWT(jti + secret.username) ::: new secret
-   *   <li>unsigned access token (as JSON string) ::: new unsigned refresh token
-   *   <li>new access token ::: new refresh token
-   *   <li>new oauth token
-   * </ol>
-   *
-   * @param secrets secrets
-   * @param headers HTTP headers
-   * @return refresh response
-   */
-  @Override
-  public Mono<Map<String, String>> refresh(Map<String, String> secrets, HttpHeaders headers) {
-
-    return Mono.just(secrets);
   }
 }
