# src/openapi/auth.yaml
@@ -1,4 +1,8 @@
 openapi: 3.1.0
+info:
+  description: |
+    Operations that are related to the auhentication and authorzation of the user. 
+
 paths:
   /auth:
     post:
@@ -11,7 +15,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "./components.yaml#/components/schemas/AuthenticationCredentials"
+              $ref: "./simple-auth-components.yaml#/components/schemas/AuthenticationCredentials"
             examples:
               good-login:
                 summary: Good login
@@ -86,3 +90,9 @@ paths:
                   ok:
                     type: boolean
                     example: false
+  /refresh:
+    post:
+      summary: Refresh token
+      description: |
+        Implements [rfc6749 refresh tokens](https://datatracker.ietf.org/doc/html/rfc6749#section-1.5).
+      operationId: refreshToken
